[gd_scene load_steps=13 format=2]

[ext_resource path="res://game_environment.tres" type="Environment" id=1]
[ext_resource path="res://Objects/Sun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Logic/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/Stars.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Planet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Logic/World.gd" type="Script" id=6]
[ext_resource path="res://Effects/Ubershader.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Planet2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Planet3.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/PlanetObsidian.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FlyCamera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -93.934, 13.19, 47.14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlyCamera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fly"
length = 17.0
tracks/0/type = "value"
tracks/0/path = NodePath("FlyCamera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6.5, 10.6, 13.5, 17 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -93.934, 13.19, 47.14 ), Vector3( -125.054, 7.08, -76.469 ), Vector3( -91.989, 7.08, -148.923 ), Vector3( -61.542, 5.248, -120.483 ), Vector3( -48.796, 8.907, -97.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlyCamera:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6.5, 10.6, 13.5, 17 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 360, 0 ), Vector3( 0, 324.799, 0 ), Vector3( 0, 223.039, 0 ), Vector3( 0, 205.346, 0 ), Vector3( 0, 175.346, 0 ) ]
}

[node name="World" type="Spatial"]
script = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="PlanetPlane" type="Spatial" parent="."]
transform = Transform( 2.90385, 0, 0, 0, 1, 0, 0, 0, 2.90385, 0, 0, 80.3443 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.996703, 0, 0.0811383, 0, 1, 0, -0.0811383, 0, -0.996703, -48.7693, 7.40088, -98.0291 )

[node name="Sun" parent="." instance=ExtResource( 2 )]
transform = Transform( 2.03594, 0, 0, 0, 2.03594, 0, 0, 0, 2.03594, 0, 0, 0 )

[node name="Stars" parent="." instance=ExtResource( 4 )]

[node name="LoadingCams" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="LoadingCams"]
transform = Transform( -0.680056, 0, -0.73316, 0, 1, 0, 0.73316, 0, -0.680056, -263.641, 0, -192.133 )
far = 1000.0

[node name="Camera2" type="Camera" parent="LoadingCams"]
transform = Transform( -0.789288, 0, -0.614024, 0, 1, 0, 0.614024, 0, -0.789288, -50.3926, 6.66329, -100.057 )
far = 1000.0

[node name="Camera3" type="Camera" parent="LoadingCams"]
transform = Transform( -0.876256, 0, 0.481845, 0, 1, 0, -0.481845, 0, -0.876256, -42.6092, 0.227874, -99.1954 )
far = 1000.0

[node name="Camera4" type="Camera" parent="LoadingCams"]
transform = Transform( 0.861399, 0, 0.507929, 0, 1, 0, -0.507929, 0, 0.861399, -42.1913, 0.227874, -58.7083 )
far = 1000.0

[node name="Ubershader" parent="LoadingCams/Camera4" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0626678, 0, -0.981606 )

[node name="IntroFlight" type="Spatial" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="IntroFlight"]
anims/RESET = SubResource( 11 )
anims/fly = SubResource( 1 )

[node name="FlyCamera" type="Camera" parent="IntroFlight"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -93.934, 13.19, 47.14 )
far = 1000.0

[node name="Tween" type="Tween" parent="IntroFlight"]

[node name="Planet" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -48.764, 0, -98.0153 )
music_prefix = "dirt"

[node name="CreditsPivot1" type="Spatial" parent="Planet"]
unique_name_in_owner = true
transform = Transform( -0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, -0.939693, 0, 0, 0 )

[node name="CreditsCamera1" type="Camera" parent="Planet/CreditsPivot1"]
unique_name_in_owner = true
transform = Transform( -3.76351e-08, 0.422618, -0.906308, -1, -4.37114e-08, 2.11427e-08, -3.06807e-08, 0.906308, 0.422618, 0, 0, 8.2 )
fov = 90.0
far = 250.0

[node name="Planet2" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -93.9909, 21.4094, 26.8254 )
music_prefix = "rock"

[node name="CreditsPivot2" type="Spatial" parent="Planet2"]
unique_name_in_owner = true
transform = Transform( 0.997819, 0, 0.0660127, 0, 1, 0, -0.0660127, 0, 0.997819, 0, 0, 1.90735e-06 )

[node name="CreditsCamera2" type="Camera" parent="Planet2/CreditsPivot2"]
unique_name_in_owner = true
transform = Transform( -3.76351e-08, 0.422618, -0.906308, -1, -4.37114e-08, 2.11427e-08, -3.06807e-08, 0.906308, 0.422618, 0, 0, 12 )
fov = 90.0
far = 250.0

[node name="Planet3" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.13, -30.1157, 58.9798 )

[node name="CreditsPivot3" type="Spatial" parent="Planet3"]
unique_name_in_owner = true
transform = Transform( 0.997819, 0, 0.0660127, 0, 1, 0, -0.0660127, 0, 0.997819, 0, 0, 1.90735e-06 )

[node name="CreditsCamera3" type="Camera" parent="Planet3/CreditsPivot3"]
unique_name_in_owner = true
transform = Transform( -4.23909e-08, 0.573577, -0.819152, -1, -4.37114e-08, 2.11427e-08, -2.36793e-08, 0.819152, 0.573577, 0, 0, 9 )
fov = 90.0
far = 250.0

[node name="SkipCutscene" type="Timer" parent="."]

[node name="PlanetObsidian" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 143.279, 0 )
music_prefix = "obsidian"

[node name="OldCutscene" type="Spatial" parent="."]
visible = false

[node name="Camera0" type="Camera" parent="OldCutscene"]
transform = Transform( 0.378729, 0, 0.925507, 0, 1, 0, -0.925507, 0, 0.378729, 247.177, 7.30024, 327.692 )
far = 1000.0

[node name="Camera1" type="Camera" parent="OldCutscene"]
transform = Transform( 0.930117, 0, 0.367264, 0, 1, 0, -0.367264, 0, 0.930117, 175.982, 7.30024, 322.773 )
far = 1000.0

[node name="Camera2" type="Camera" parent="OldCutscene"]
transform = Transform( 0.980802, 0, 0.195005, 0, 1, 0, -0.195005, 0, 0.980802, 41.3665, -9.4695, 188.491 )
far = 1000.0

[node name="Camera3" type="Camera" parent="OldCutscene"]
transform = Transform( 0.916837, -0.117392, -0.381613, 0, 0.955798, -0.294024, 0.399261, 0.269572, 0.876311, -26.7323, -13.3136, 97.7882 )
far = 1000.0

[node name="Camera4" type="Camera" parent="OldCutscene"]
transform = Transform( 0.753129, -0.165565, -0.636698, 0.0329293, 0.976088, -0.214868, 0.657048, 0.140857, 0.740572, 9.2304, 55.5193, 22.5081 )
far = 1000.0

[node name="Camera5" type="Camera" parent="OldCutscene"]
transform = Transform( 0.959644, 0, 0.281219, 0, 1, 0, -0.281219, 0, 0.959644, 11.8402, 54.0863, -13.0044 )

[node name="Camera6" type="Camera" parent="OldCutscene"]
transform = Transform( 0.461764, 0, 0.887003, 0, 1, 0, -0.887003, 0, 0.461764, -45.7271, 10.6026, -95.7689 )

[node name="NewCutscene" type="Spatial" parent="."]

[node name="Position1" type="Camera" parent="NewCutscene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -93.9341, 13.1896, 41.079 )
far = 1000.0

[node name="Position2" type="Camera" parent="NewCutscene"]
transform = Transform( 0.817135, 0, -0.576447, 0, 1, 0, 0.576447, 0, 0.817135, -125.054, 7.07999, -76.4686 )
far = 1000.0

[node name="Position3" type="Camera" parent="NewCutscene"]
transform = Transform( -0.730889, 0, -0.682496, 0, 1, 0, 0.682496, 0, -0.730889, -91.9886, 7.08001, -148.923 )
current = true
far = 1000.0

[node name="Position4" type="Camera" parent="NewCutscene"]
transform = Transform( -0.903739, 0, -0.428084, 0, 1, 0, 0.428084, 0, -0.903739, -61.5421, 5.24779, -120.483 )
far = 1000.0

[node name="Position5" type="Camera" parent="NewCutscene"]
transform = Transform( -0.996703, 0, 0.0811382, 0, 1, 0, -0.0811382, 0, -0.996703, -48.796, 8.907, -97.7 )
far = 1000.0

[connection signal="timeout" from="SkipCutscene" to="." method="_on_SkipCutscene_timeout"]
